--- a/flask_face/templates/index.html
+++ b/flask_face/templates/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>Video Streaming Demonstration</h1>
     <img id="bg" src="{{ url_for('video_feed') }}">
+    <img id="bg" src="{{ url_for('text_feed') }}">  
   </body>
 </html>
