--- a/flask_face/templates/new.html
+++ b/flask_face/templates/new.html
@@ -213,6 +213,7 @@
 
                         <!-- ADD IN ML VIDEO HERE!!!!!! -->
                         <img src="{{url_for('video_feed')}}" alt="">
+                        <img src="{{url_for('results')}}" alt="">
                     </div> 
 
                     <div class="row">   
