--- a/flask_face/templates/trends.html
+++ b/flask_face/templates/trends.html
@@ -12,13 +12,13 @@
     <title>Menda &#8226; Trends</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="../static/css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
 
@@ -33,7 +33,7 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon rotate-n-15">
-                    <img src="img/menda_logo_lockup.png" width="48px" height="48px"
+                    <img src="../static/img/menda_logo_lockup.png" width="48px" height="48px"
                          img> 
                 </div>
                 <div class="sidebar-brand-text mx-3">Menda</div>
@@ -71,7 +71,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Logs:</h6>
                         <a class="collapse-item" href="buttons.html">Log History</a>
-                        <a class="collapse-item" href="cards.html">Trends</a>
+                        <a class="collapse-item" href="trends.html">Trends</a>
                     </div>
                 </div>
             </li>
@@ -87,9 +87,9 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Categories:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Music</a>
-                        <a class="collapse-item" href="utilities-border.html">Podcasts</a>
-                        <a class="collapse-item" href="utilities-animation.html">Meditation</a>
+                        <a class="collapse-item" href="music.html">Music</a>
+                        <a class="collapse-item" href="podcast.html">Podcasts</a>
+                        <a class="collapse-item" href="meditation.html">Meditation</a>
                     </div>
                 </div>
             </li>
@@ -104,7 +104,7 @@
 
             <!-- Sidebar Message -->
             <div class="sidebar-card">
-                <!-- <img class="sidebar-card-illustration mb-2" src="img/undraw_rocket.svg" alt=""> -->
+                <!-- <img class="sidebar-card-illustration mb-2" src="../static/img/undraw_rocket.svg" alt=""> -->
                 <p class="text-center mb-2">Menda is <strong>not a diagnosis app</strong>. Please refer to your family doctor for more information.</p>
                 <a class="btn btn-success btn-sm" href="https://www.ontario.ca/page/find-family-doctor-or-nurse-practitioner">Find a doctor</a>
             </div>
@@ -176,8 +176,8 @@
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Amit Chakma</span>
-                                <img class="img-profile rounded-circle"
-                                    src="img/undraw_profile.svg">
+                                <img class="../static/img-profile rounded-circle"
+                                    src="../static/img/undraw_profile.svg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -469,21 +469,21 @@
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/vendor/jquery/jquery.min.js"></script>
+    <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="../static/vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
+    <script src="../static/js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
+    <script src="../static/vendor/chart.js/Chart.min.js"></script>
 
     <!-- Page level custom scripts -->
-    <script src="js/demo/chart-area-demo.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script>
+    <script src="../static/js/demo/chart-area-demo.js"></script>
+    <script src="../static/js/demo/chart-pie-demo.js"></script>
 
 </body>
 
