--- a/flask_face/static/css/sb-admin-2.css
+++ b/flask_face/static/css/sb-admin-2.css
@@ -10825,7 +10825,7 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url(https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=600&h=800&fit=crop&ixid=eyJhcHBfaWQiOjF9);
   background-position: center;
   background-size: cover;
 }
